client/src/dashboard/styles/dashboard/_dashboard.scss
.dashboards-intro {
  @include span-columns(8);
  clear: both;
  margin-bottom: 40px;
  margin-top: $spacing-unit;

  @media(max-width: $screen-md) {
    margin-bottom: 15px;
  }

  @media(max-width: 768px) {
   @include span-columns(12);
   margin: 0;
 }
}

.metrics {
  .aus-width-one-third {
    @media(max-width: $screen-md) {
      @include span-columns(12);
    }
  }
}

.dashboards-intro-sec {
  @include span-columns(4);
  margin-top: 30px;
  color: $gov-au-brand-colour;
  display: flex;
  justify-content: flex-end;

  @media (max-width: $screen-md) {
    padding-left: 10px;
  }

  @media(max-width: 768px) {
    @include span-columns(12);
    padding-left:0;
    margin-bottom: 30px;

    &.hide-on-mobile {
      display: none;
    }
  }

  .number-of-dashboards {
    font-size: 80px;
    line-height: 68px;
    font-weight: bold;
    justify-content: flex-end;
    padding-right:10px;

    @media(max-width: 768px) {
      float: left;
    }
  }

  span:not(.number-of-dashboards) {
    font-size: 30px;
    line-height: 36px;
    float: right;
    justify-content: flex-end;
    text-align: left;

    @media(max-width: 768px) {
      float: none;
    }
  }
}

.metric-link {
  clear:both;
  margin-bottom:17px;
  text-align: center;

  a {
    color: $brand-primary-colour;
    margin: 10px 0 8px 0;
    font-weight: 700;
    border-bottom: 0;
    text-decoration: underline;
  }
}

.metric-definitions {
  margin-right: 0 !important;
  @include span-columns(8);
  border-bottom: 1px solid $axis-stroke-colour;
  margin-bottom: 37px;

  @media(max-width: 768px) {
    @include span-columns(12 of 12);
    margin-top: 30px;
    margin-bottom: 0;
  }

  @media(max-width: $screen-md) {
    @include span-columns(12 of 12);
    margin-top: 15px;
    margin-bottom: 0;
  }

  &:last-child {
    margin-right: 0;
  }
}

.updated-at {
  @media(max-width: 768px) {
    p {
      font-size: 13px;
    }
  }
}

.dashboards-heading {
  margin-top: 0;
  font-size: 2.25rem;
  font-weight: 400;
}

.metric-definitions__metric {
  @include span-columns(2 of 8);
  p {
    padding-top:9px;
  }

  @media(max-width: 768px) {
    @include span-columns(12 of 12);
    margin-bottom: 15px;

    .widget__title {
      h4 {
        height:25px;
      }
    }
    p {
      padding-top:4px;
      font-size: 13px;
    }
  }

  h4 {
    margin-top: 0;
    margin-bottom:0;
    height:35px;
    font-weight:600;
  }
}

.dashboard__top {
  color: $secondary-text-colour;
}

.hero {
  @include media($screen-sm) {
    min-height: $spacing-unit;
  }
}

.hero-region {
  background-color: $pale-grey;
  padding-bottom: $spacing-unit / 2;
  padding-top: $spacing-unit * 2;
}

.metric-breakdown-view {
  background-color: $light-grey;
  padding: 0;
  margin: 0;
}

.dashboard__kpis {
  background-color: $white;
  margin-bottom: 15px;

  .widget__title::before {
    display: inline-block;
    content: '\f111';
    font-family: 'fontawesome';
    padding-right: 10px;
  }

  .widget__definition,
  .widget__data-source,
  .widget__last-updated {
    display: none;
  }

  .widget {
    min-height: 0;
    height: auto;

    &.has-data-false {
      min-height: 0;
    }

    .widget__title {
      text-align: center;
      height: 35px;

      h4 {
        display: inline;
      }
    }
  }

  .chart {
    display: none;
  }

  @include media($screen-sm) {
    .chart {
      display: block;
    }
  }
}


.no-js {
  .widget__definition--title {
    display: none;
  }

  .meta-group {
    display: block;
  }

  .toggle-group {
    display: none;
  }

  .widget {
    overflow: auto;

    .widget__data {
      position: relative;
      width: 100%;
      height: 100%;
      margin: 0;
      padding: 0 15px;
      overflow: visible;

      table {
        width: 100%;
        text-align: left;
        border: $table-border;
        margin-bottom: 10px;

        & > tbody > tr:nth-of-type(odd) {
          background-color: $table-odd-row-bg-colour;
          padding: 10px;
        }
      }

      caption {
        text-align: left;
        text-transform: capitalize;
        font-weight: 600;
        margin-bottom: 10px;
      }
    }
  }
}

@media (max-width: 768px){
  .dashboard__kpis{
    .widget {

      .widget__title {
        @include span-columns(8);
        @include omega(2n);

      }
      .widget__inner {
        @include span-columns(4);
        @include omega(2n);
        margin-top: 4px;
      }
    }
  }
}

.title-links {
  margin-right: -15px;
  margin-left: -15px;

  a {
    display:block;
    float: right;
    color: #18788d;
  }

  h1 {
    line-height: 1;
    margin-top: 0;
    clear: both;
    padding-top: 46px;

    @include media($screen-sm) {
      font-size: 1.875 * $fallback;
      font-size: 1.875rem;
    }
  }

  h2 {
    font-size: 1rem;
    font-weight: 400;
    padding-top: 27px;
    margin-bottom: 0;
    margin-top: 0;
  }

  .aus-width-one-half {
    margin-top: 15px;
    @include omega(2n);
  }

  .link--external-alt {
    @media screen and (max-width: 768px){
      float:left;
    }
  }
}

.hero-heading {
  font-size: 1.875rem;
  font-weight: 700;
}

